Fixed project repo URL

--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.0.1",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/realtorist/Realtorist.Install.UI.git"
+    "url": "git+https://github.com/realtorist/Realtorist.Web.Install.UI.git"
   },
   "bugs": {
-    "url": "https://github.com/realtorist/Realtorist.Install.UI/issues"
+    "url": "https://github.com/realtorist/Realtorist.Web.Install.UI/issues"
   },
   "scripts": {
     "ng": "ng",
