--- a/angular.json
+++ b/angular.json
@@ -22,24 +22,16 @@
             "assets": [
               "src/assets",
               "src/favicon.ico",
-              "src/favicon.png",
-              {
-                "glob": "**/*",
-                "input": "node_modules/leaflet/dist/images",
-                "output": "/assets/img/markers"
-              }
+              "src/favicon.png"
             ],
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.css",
               "node_modules/typeface-exo/index.css",
               "node_modules/roboto-fontface/css/roboto/roboto-fontface.css",
-              "node_modules/ionicons/scss/ionicons.scss",
               "node_modules/@fortawesome/fontawesome-free/css/all.css",
               "node_modules/socicon/css/socicon.css",
               "node_modules/nebular-icons/scss/nebular-icons.scss",
               "node_modules/pace-js/templates/pace-theme-flash.tmpl.css",
-              "node_modules/leaflet/dist/leaflet.css",
-              "node_modules/suneditor/dist/css/suneditor.min.css",
               "src/app/@theme/styles/styles.scss"
             ],
             "scripts": [
@@ -47,12 +39,6 @@
               "node_modules/pace-js/pace.min.js"
             ],
             "allowedCommonJsDependencies": [
-              "lodash",
-              "codemirror",
-              "dragula",
-              "zrender/lib/svg/svg",
-              "zrender/lib/vml/vml",
-              "style-loader!leaflet/dist/leaflet.css"
             ]
           },
           "configurations": {
